2020-01-28: Hsiang Chen <a.chenxiang.z@gmail.com>
	* Version 1.3 released
	* Replace timeout watcher with condition variable
	* Optimized threads

2020-01-27: Hsiang Chen <a.chenxiang.z@gmail.com>
	* Add feature of multiple threads
	* Remove `Socks.socket(int)' on `socks.cpp'
	* Remove `buffer.cpp' and `buffer.h'
	* Add backtrace feature to collect bugs info in case of crashing of program

2020-01-23: Hsiang Chen <a.chenxiang.z@gmail.com>
	* Version 1.2 released
	* Configuration file has been featured
	* Also support PID file

2020-01-11: Hsiang Chen <a.chenxiang.z@gmail.com>
	* Version 1.1 released
	* Fixed many bugs

2019-12-20: Hsiang Chen <a.chenxiang.z@gmail.com>
	* jackpot project created