@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.4)
 project(jackpot)
 add_subdirectory(doc)
 add_subdirectory(src)
