@@ -6,9 +6,18 @@
 #ifndef	_TLS_H_
 #define	_TLS_H_
 
+#include <map>
 #include <string>
 #include <openssl/ssl.h>
 #include <openssl/err.h>
+
+#include "socks.h"
+#include "config.h"
+
+struct SSLcli {
+  int port;
+  std::string ip;
+};
 
 class TLS {
 public:
@@ -18,7 +27,7 @@ public:
   bool init(); // for client side
   bool init(const std::string& key, const std::string& cert); // for server side
 
-  SSL* ssl();
+  SSL* ssl(const std::string& ip, int port);
   int fd(SSL* ssl, int fd);
   int accept(SSL* ssl);
   int connect(SSL* ssl);
@@ -26,10 +35,11 @@ public:
   int peek(SSL* ssl, void* buf, int num);
   int write(SSL* ssl, void* buf, int num);
   void close(SSL* ssl);
-
-  void error();
+  void error(SSL* ssl = nullptr);
 private:
   SSL_CTX* _ctx;
+
+  std::map<SSL*, SSLcli*> _sslcli;
 };
 
 #endif	/* _TLS_H_ */
